<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddServerData" >

    <EditText
        android:id="@+id/nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewseparator"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/NameLocal"
        android:inputType="text"
        android:textColor="@color/textColor" >

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/viewseparator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/separator" />

       <ScrollView
           android:id="@+id/scrollViewData"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_alignParentLeft="true"
           android:layout_alignRight="@+id/nombre"
           android:layout_marginTop="75dp" >

          <LinearLayout
               android:id="@+id/linearData"
               android:layout_width="fill_parent"
               android:layout_height="323dp"
               android:orientation="vertical" >
                <EditText
		           android:id="@+id/hosting"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginTop="17dp"
		           android:ems="10"
		           android:hint="@string/Hosting"
		           android:textColor="@color/textColor"
		           android:inputType="text" />
		
		       <EditText
		           android:id="@+id/port"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginTop="19dp"
		           android:ems="10"
		           android:hint="@string/Port"
		           android:textColor="@color/textColor"
		           android:inputType="numberDecimal" />
		
		       <EditText
		           android:id="@+id/username"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginTop="16dp"
		           android:ems="10"
		           android:textColor="@color/textColor"
		           android:hint="@string/Username"
		           android:inputType="text" />
		
		       <EditText
		           android:id="@+id/password"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginTop="19dp"
		           android:ems="10"
		           android:textColor="@color/textColor"
		           android:hint="@string/Password"
		           android:inputType="textPassword" />
		       
		       <LinearLayout
		           android:id="@+id/lineardatabase"
	               android:layout_width="fill_parent"
	               android:layout_height="match_parent"
	               android:layout_marginTop="19dp"
	               android:orientation="horizontal"
		           >

		           <EditText
		               android:id="@+id/database"
		               android:layout_width="0dp"
		               android:layout_height="match_parent"
		               android:layout_marginTop="0dp"
		               android:layout_weight="1"
		               android:ems="10"
		               android:textColor="@color/textColor"
		               android:hint="@string/DataBase"
		               android:inputType="text" />

		           <Button
		               android:id="@+id/btndatabase"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:background="@drawable/btndtabase" />
		           
		       </LinearLayout>
		 
		       <EditText
		           android:id="@+id/description"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginTop="19dp"
		           android:ems="10"
		           android:textColor="@color/textColor"
		           android:hint="@string/Description"
		           android:inputType="text" />

           </LinearLayout>
       </ScrollView>

</RelativeLayout>